Setup for a way to properly display playlists tracks
Some basic layout to show both playlist and (soon) its tracks.

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,4 +1,19 @@
+/*.Body { display: grid; }*/
 .App {
   text-align: center;
+  height: 100%;
 }
 
+.App-playlistTrackContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  /*height: 100%;*/
+}
+
+.App-playlists,
+.App-tracks {
+  flex: 1;
+  height: 100%;
+}
