--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,14 @@
+html,
 body {
+  height: 100%;
+  width: 100%;
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+}
+
+.PageWrapper {
+  height: 100%;
+  width: 100%;
+  padding: 10px;
 }
