--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,6 +2,9 @@
 .App {
   text-align: center;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
 }
 
 .App-playlistTrackContainer {
@@ -17,3 +20,15 @@
   flex: 1;
   height: 100%;
 }
+
+.App-playbackContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+/* Utils, will put in a seperate file when necessary */
+.u-displayBlock {
+  display: block;
+}
+
