--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -25,6 +25,8 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  flex: 1 0 auto;
+  min-height: 100px;
 }
 
 /* Utils, will put in a seperate file when necessary */
